--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/ui": "^2.15.5",
     "@sanity/vision": "^3.78.1",
     "dayjs": "^1.11.13",
     "next": "15.2.1",
     "next-sanity": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sanity": "^3.78.1",
+    "react-is": "^19.0.0",
+    "sanity": "^3.79.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
@@ -32,7 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.0.13",
+    "typescript": "^5.7.3"
   }
 }
